sumo/tests/netconvert/errors/invalid_argument_vclass/options.netconvert
--xml-node-files input_nodes.nod.xml --xml-edge-files input_edges.edg.xml --remove-edges.by-vclass bogus,bus
